--- a/package.json
+++ b/package.json
@@ -8,12 +8,24 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.0.8",
+    "@headlessui/react": "^1.4.3",
+    "@heroicons/react": "^1.0.5",
+    "@tailwindcss/forms": "^0.4.0",
+    "@tailwindcss/typography": "^0.5.0",
+    "autoprefixer": "^10.4.2",
+    "daisyui": "^1.24.3",
+    "next": "^12.0.8",
+    "next-auth": "^4.1.2",
+    "postcss": "^8.4.5",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "recoil": "^0.5.2",
+    "spotify-web-api-node": "^5.0.2",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "eslint": "8.7.0",
-    "eslint-config-next": "12.0.8"
+    "eslint-config-next": "^0.2.4",
+    "tailwindcss": "^3.0.15"
   }
 }
