--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@tailwindcss/typography": "^0.5.0",
     "autoprefixer": "^10.4.2",
     "daisyui": "^1.24.3",
+    "formidable": "^3.2.1",
+    "lodash": "^4.17.21",
     "next": "^12.0.8",
     "next-auth": "^4.1.2",
     "postcss": "^8.4.5",
@@ -21,6 +23,7 @@
     "react-dom": "17.0.2",
     "recoil": "^0.5.2",
     "spotify-web-api-node": "^5.0.2",
+    "superagent": "^7.1.1",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
