--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "postcss": "^8.4.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-feather": "^2.0.9",
     "recoil": "^0.5.2",
     "spotify-web-api-node": "^5.0.2",
     "superagent": "^7.1.1",
